--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ function initBot() {
   }
 
   window.botpressWebChat.init({
-    botId: "你的botId",
-    clientId: "你的clientId",
+    botId: "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
+    clientId: "a77753bd-2319-48dd-a782-9d6ba282b204",
     hostUrl: "https://cdn.botpress.cloud/webchat/v3.5",
     messagingUrl: "https://messaging.botpress.cloud",
     hideWidget: true,
