--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Botpress Demo</h1>
 <form id="myform">
-  <label>Name:</label><input type="text" name="name" required><br>
+  <label>Name1:</label><input type="text" name="name" required><br>
   <label>Email:</label><input type="email" name="email" required><br>
   <button type="submit">Submit</button>
 </form>
