--- a/index.html
+++ b/index.html
@@ -1,171 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Become a Botbassador!</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 2rem;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 2rem;
-            color: #777;
-        }
-
-        h2 {
-            text-align: center;
-            margin-bottom: 2rem;
-            color: #444;
-        }
-
-        #myform {
-            max-width: 600px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-        }
-
-        input[type="text"], 
-        input[type="email"], 
-        textarea {
-            width: 100%;
-            padding: 0.5rem;
-            margin-bottom: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 1rem;
-        }
-
-        button {
-            background-color: #007BFF;
-            color: white;
-            padding: 0.7rem 1.5rem;
-            font-size: 1rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            display: block;
-            margin-left: auto;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Botpress Test</title>
 </head>
 <body>
-<h1> Botpress Botbassador Program</h1>
-<h2>
-What is this?
-</h2>
-<p>
-Through the BotBassador Program, we'll be able to recognize and reward our most dedicated builders with things like early access to beta features, exclusive swag, and additional Botpress perks.
-</p>
 
-<h2>
-Perks of becoming a BotBassador:
-</h2>
-<p>
-🥇 Priority access to beta features <br>
+<button onclick="openBot()">Open Bot</button>
 
-🚀 2,000 monthly messages (2x the amount regular users get) <br>
-
-🌟 A shiny new Discord status to show off - you'll be known as a BotBassador and could eventually make your way up to BotPro!
-<br>
-🤝 An exclusive line of communication with us, the Botpress team, in a dedicated Discord channel <br>
-
-🎁 Exclusive BotBassador swag <br> <br>
-
-Our community is instrumental in building better bots, and we want to recognize and reward your dedication. Join us in shaping the future of chatbot technology while gaining recognition and awesome opportunities! </p>
-
-<a href="https://botpress.com/ambassador-program"><h2>
-Click here to apply!
-</h2></a>
-<em><strong>The following form is a demo for triggers and not the actuall Botpress ambassador application!</strong></em><br><br>
-    <form id='myform'>
-        <label for="name">Your Full Name1:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Email Address:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="linkedin">Linkedin Profile URL:</label>
-        <input type="text" id="linkedin" name="linkedin" required>
-
-        <label for="message">Cover Letter/ Application Message:</label>
-        <textarea id="message" name="message" rows="7"></textarea>
-
-        <button type="submit">Submit Application</button>
-    </form>
-</body>
 <script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js"></script>
 <script>
-var botReady = false;
-var detail = null;
-
-// 初始化 Botpress
-window.botpressWebChat.init({
+function openBot() {
+  window.botpressWebChat.init({
     botId: "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
     clientId: "a77753bd-2319-48dd-a782-9d6ba282b204",
     hostUrl: "https://cdn.botpress.cloud/webchat/v3.5",
-    messagingUrl: "https://messaging.botpress.cloud",
-    hideWidget: true,
-    lazySocket: true,
-    useSessionStorage: true,
-    enableConversationDeletion: true,
-    showPoweredBy: true,
-    composerPlaceholder: "Chat with bot"
-});
-
-// 等 bot ready
-window.botpressWebChat.onEvent((event) => {
-    if(event.type === 'LIFECYCLE.READY') {
-        botReady = true;
-        console.log('Botpress Ready');
-        // 如果表单已经提交过，发送 payload
-        if(detail) sendPayload(detail);
-    }
-});
-
-// 显示聊天窗口 + 发送 payload
-function sendPayload(payload) {
-    if(!botReady) return;
-    window.botpressWebChat.sendEvent({ type: 'show' });
-    window.botpressWebChat.sendPayload({ type: 'trigger', payload: payload });
-    console.log("Payload sent:", payload);
+    messagingUrl: "https://messaging.botpress.cloud"
+  })
 }
-
-// 表单提交
-document.getElementById('myform').addEventListener('submit', function(e){
-    e.preventDefault();
-    detail = {
-        name: this.name.value,
-        email: this.email.value,
-        linkedin: this.linkedin ? this.linkedin.value : "",
-        message: this.message ? this.message.value : "",
-        position: "Botbassador"
-    };
-
-    if(botReady){
-        sendPayload(detail);
-    } else {
-        console.log("Bot not ready yet, waiting...");
-        // 等待 bot ready 时会自动触发 sendPayload
-    }
-});
 </script>
 
+</body>
 </html>
