--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
 </head>
 <body>
 
-<button onclick="openBot()">Open Bot</button>
+<button id="openBtn" disabled>Loading bot...</button>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js"></script>
 <script>
-function openBot() {
-  window.botpressWebChat.init({
-    botId: "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
-    clientId: "a77753bd-2319-48dd-a782-9d6ba282b204",
-    hostUrl: "https://cdn.botpress.cloud/webchat/v3.5",
-    messagingUrl: "https://messaging.botpress.cloud"
-  })
-}
+  const btn = document.getElementById('openBtn')
+
+  const s = document.createElement('script')
+  s.src = 'https://cdn.botpress.cloud/webchat/v3.5/inject.js'
+  s.onload = () => {
+    console.log('Botpress script loaded')
+    btn.disabled = false
+    btn.innerText = 'Open Bot'
+  }
+  document.body.appendChild(s)
+
+  btn.onclick = () => {
+    console.log('Init bot')
+    window.botpressWebChat.init({
+      botId: "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
+      clientId: "a77753bd-2319-48dd-a782-9d6ba282b204",
+      hostUrl: "https://cdn.botpress.cloud/webchat/v3.5",
+      messagingUrl: "https://messaging.botpress.cloud"
+    })
+  }
 </script>
 
 </body>
