--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   s.onload = () => {
     console.log('Botpress script loaded')
     btn.disabled = false
-    btn.innerText = 'Open Bot'
+    btn.innerText = 'Open Bot1'
   }
   document.body.appendChild(s)
 
