--- a/index.html
+++ b/index.html
@@ -3,94 +3,61 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Retail Pro Prism - SubMain Trigger</title>
+<title>Retail Pro Prism</title>
+<link rel="icon" type="image/png" href="https://josephteo79.github.io/shared-library/v1.0/icon/favicon.png">
+<link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/treeview.css">
+<link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/tab-style.css">
+<link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/future-updates.css">
+<link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/style1.css">
+
+<!-- PDF.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+<script>
+pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js";
+</script>
+
+<!-- Lunr.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.9/lunr.min.js"></script>
+
 <style>
-  #bot-button {
-    position: fixed;
-    bottom: 90px;
-    right: 20px;
-    z-index: 1000;
-    background: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    font-size: 24px;
-    cursor: pointer;
-  }
-  #bot-iframe {
-    position: fixed;
-    bottom: 160px;
-    right: 20px;
-    width: 400px;
-    height: 500px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    display: none;
-    z-index: 999;
+  #bot-iframe { 
+    position:fixed; bottom:160px; right:20px; 
+    width:400px; height:500px; 
+    border:1px solid #ccc; border-radius:8px; 
+    z-index:999; 
   }
 </style>
 </head>
 <body>
 
-<button id="bot-button">💬</button>
+<h1>Retail Pro Prism</h1>
+<p>网页打开即显示 Botpress 欢迎消息。</p>
+
+<!-- Botpress iframe -->
 <iframe id="bot-iframe"></iframe>
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-  const botButton = document.getElementById('bot-button');
   const botIframe = document.getElementById('bot-iframe');
-  let botLoaded = false;
 
-  // 用户信息
-  const userInfo = {
-    name: 'Joseph Teo',
-    email: 'hai2022my@gmail.com',
-    linkedin: 'https://linkedin.com/in/josephteo',
-    message: 'Hello from SubMain'
-  };
+  // Botpress shareable URL + config
+  const botUrl = 'https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json';
+  
+  // iframe 自动加载
+  botIframe.src = botUrl;
 
-  // Botpress shareable URL
-  function buildBotUrl() {
-    return 'https://cdn.botpress.cloud/webchat/v3.5/shareable.html' +
-           '?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json';
-  }
-
-  // 打开 Bot 并触发 trigger
-  function openBotAndTrigger() {
-    if (!botLoaded) {
-      botIframe.src = buildBotUrl();
-      botLoaded = true;
-    }
-    botIframe.style.display = 'block';
-
-    // 等 iframe 加载完成后发送 trigger
-    botIframe.onload = function() {
-      botIframe.contentWindow.postMessage({
-        type: 'trigger',
-        name: 'submain_form',    // 这里是你在 Botpress Studio 定义的 trigger
-        payload: userInfo        // 传入用户信息
-      }, '*');
+  // iframe 加载完成后触发 trigger
+  botIframe.onload = function() {
+    const payload = {
+      type: 'trigger',              // 触发 trigger
+      payload: 'submain_form',      // Studio 里设置的 trigger 名称
+      metadata: {
+        message: 'Welcome to Retail Pro' // 你想显示的欢迎消息
+      }
     };
-  }
-
-  // 点击按钮触发
-  botButton.addEventListener('click', openBotAndTrigger);
-
-  // 如果有表单，提交时直接触发
-  /*
-  const form = document.getElementById('submain-form');
-  form?.addEventListener('submit', function(e){
-    e.preventDefault();
-    userInfo.name = form.name.value;
-    userInfo.email = form.email.value;
-    userInfo.linkedin = form.linkedin.value;
-    userInfo.message = form.message.value;
-    openBotAndTrigger();
-  });
-  */
-
+    // 发送到 iframe
+    botIframe.contentWindow.postMessage(payload, '*');
+  };
 });
 </script>
 
