--- a/index.html
+++ b/index.html
@@ -10,7 +10,42 @@
 </head>
 <body>
 
-<h1>Retail Pro Prism</h1>
+<h1>Retail Pro Prism</h1><!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Retail Pro Prism MVP</title>
+<style>
+  body { margin:0; font-family: sans-serif; }
+  #bot-iframe { position:fixed; bottom:20px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; z-index:999; }
+</style>
+</head>
+<body>
+
+<h1>Welcome to Retail Pro Prism1 / Footfallcam</h1>
+
+<!-- Botpress iframe 自动触发 trigger -->
+<iframe id="bot-iframe"></iframe>
+
+<script>
+  // 构建 iframe src，自动 trigger submain_form
+  const botIframe = document.getElementById('bot-iframe');
+  const params = new URLSearchParams({
+    trigger: 'submain_form',
+    userName: 'Joseph Teo',
+    userEmail: 'hai2022my@gmail.com',
+    page: 'Retail Pro Prism'
+  });
+
+  botIframe.src = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html" +
+                  "?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json" +
+                  "&" + params.toString();
+</script>
+
+</body>
+</html>
+
 
 <iframe id="bot-iframe"></iframe>
 
