--- a/index.html
+++ b/index.html
@@ -3,87 +3,50 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Retail Pro Prism</title>
-<style>
-  #bot-iframe { position:fixed; bottom:20px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; z-index:999; }
-</style>
-</head>
-<body>
-
-<h1>Retail Pro Prism</h1><!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Retail Pro Prism MVP</title>
 <style>
-  body { margin:0; font-family: sans-serif; }
-  #bot-iframe { position:fixed; bottom:20px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; z-index:999; }
+  #bot-button { position:fixed; bottom:90px; right:20px; z-index:1000; background:#007bff; color:#fff; border:none; border-radius:50%; width:60px; height:60px; font-size:24px; cursor:pointer; }
+  #bot-iframe { position:fixed; bottom:160px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; display:none; z-index:999; }
 </style>
 </head>
 <body>
 
-<h1>Welcome to Retail Pro Prism1 / Footfallcam</h1>
+<h1>Retail Pro Prism MVP</h1>
 
-<!-- Botpress iframe 自动触发 trigger -->
+<button id="bot-button">💬</button>
 <iframe id="bot-iframe"></iframe>
 
 <script>
-  // 构建 iframe src，自动 trigger submain_form
+document.addEventListener('DOMContentLoaded', function() {
+  const botButton = document.getElementById('bot-button');
   const botIframe = document.getElementById('bot-iframe');
-  const params = new URLSearchParams({
-    trigger: 'submain_form',
-    userName: 'Joseph Teo',
-    userEmail: 'hai2022my@gmail.com',
-    page: 'Retail Pro Prism'
-  });
+  let botLoaded = false;
 
-  botIframe.src = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html" +
-                  "?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json" +
-                  "&" + params.toString();
-</script>
+  // 构建 Botpress shareable URL
+  function buildBotUrl() {
+    const params = new URLSearchParams({
+      trigger: 'submain_form',      // 自动触发的 trigger
+      page: 'Retail Pro Prism',
+      userName: 'Joseph Teo',
+      userEmail: 'hai2022my@gmail.com'
+    });
+    return 'https://cdn.botpress.cloud/webchat/v3.5/shareable.html' +
+           '?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json' +
+           '&' + params.toString();
+  }
 
-</body>
-</html>
-
-
-<iframe id="bot-iframe"></iframe>
-
-<script>
-const botIframe = document.getElementById('bot-iframe');
-let botLoaded = false;
-
-function buildBotUrl() {
-  // Botpress shareable.html + 配置
-  return 'https://cdn.botpress.cloud/webchat/v3.5/shareable.html' +
-         '?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json';
-}
-
-function openBotAndTrigger() {
+  // 页面打开自动显示并 trigger
   if (!botLoaded) {
     botIframe.src = buildBotUrl();
     botLoaded = true;
-
-    // 等 iframe 加载完成后触发 payload
-    botIframe.onload = () => {
-      // 用 postMessage 通知 iframe 触发 trigger
-      botIframe.contentWindow.postMessage({
-        type: 'trigger',
-        trigger: 'submain_form',
-        payload: {
-          page: 'Retail Pro Prism',
-          module: 'FrontOffice',
-          userName: 'Joseph Teo',
-          userEmail: 'hai2022my@gmail.com'
-        }
-      }, '*');
-    };
   }
   botIframe.style.display = 'block';
-}
 
-// 打开网页立即触发
-window.addEventListener('DOMContentLoaded', openBotAndTrigger);
+  // 点击按钮切换显示/隐藏
+  botButton.addEventListener('click', function() {
+    botIframe.style.display = (botIframe.style.display === 'none') ? 'block' : 'none';
+  });
+});
 </script>
 
 </body>
