--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-<h1>Retail Pro Prism MVP</h1>
+<h1>Retail Pro Prism MV1P</h1>
 
 <button id="bot-button">💬</button>
 <iframe id="bot-iframe"></iframe>
