--- a/index.html
+++ b/index.html
@@ -5,41 +5,52 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Retail Pro Prism MVP</title>
 <style>
-  #bot-container {
+  #bot-button {
     position: fixed;
-    bottom: 20px;
+    bottom: 90px;
+    right: 20px;
+    z-index: 1000;
+    background: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    font-size: 24px;
+    cursor: pointer;
+  }
+  #bot-iframe {
+    position: fixed;
+    bottom: 160px;
     right: 20px;
     width: 400px;
     height: 500px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    display: block;
     z-index: 999;
   }
 </style>
 </head>
 <body>
 
-<h1>Retail Pro Prism MVP</h1>
-<div id="bot-container"></div>
+<h1>Retail Pro Prism MVPc</h1>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.5/botpress.webchat.js"></script>
+<button id="bot-button">💬</button>
+
+<!-- iframe embed + URL trigger -->
+<iframe id="bot-iframe"
+  src="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json&trigger=form1&page=Retail%20Pro%20Prism&userName=Joseph%20Teo&userEmail=hai2022my@gmail.com"
+  style="display:block;">
+</iframe>
+
 <script>
-  // 初始化 Webchat
-  window.botpressWebChat.init({
-    botId: '513dc7b-a61b-4a0e-b0c2-79292f0f64b8', // 你的 Bot ID
-    host: 'https://cdn.botpress.cloud',
-    messagingUrl: 'https://cdn.botpress.cloud',
-    container: '#bot-container',
-    showCloseButton: true
-  }).then(() => {
-    // 页面加载后触发 Custom Trigger
-    window.botpressWebChat.sendEvent({
-      type: 'form1',      // 你的 Custom Trigger 名
-      channel: 'web',
-      payload: {
-        page: 'Retail Pro Prism',
-        userName: 'Joseph Teo',
-        userEmail: 'hai2022my@gmail.com'
-      }
-    });
+  const botButton = document.getElementById('bot-button');
+  const botIframe = document.getElementById('bot-iframe');
+
+  // 点击按钮切换聊天窗口显示/隐藏
+  botButton.addEventListener('click', () => {
+    botIframe.style.display = (botIframe.style.display === 'none') ? 'block' : 'none';
   });
 </script>
 
