--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p><strong>Category:</strong> <span id="category">general</span></p>
   </div>
 
-  <button onclick="clearChat()">clean bot</button>
+  <button onclick="clearChat()">clean bot1</button>
   <!-- Botpress Webchat -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js"></script>
 
