--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="info-box">
     <h3>User Data Sent to Bot</h3>
     <p><strong>Email:</strong> <span id="user-email">test.user@example.com</span></p>
-    <p><strong>Page:</strong> <span id="page-name">Homepage</span></p>
+    <p><strong>Page1:</strong> <span id="page-name">Homepage</span></p>
     <p><strong>Category:</strong> <span id="category">general</span></p>
   </div>
 
@@ -61,7 +61,7 @@
       window.botpress.updateUser({
         data: {
           email: "test.user@example.com",
-          page_name: "Homepage",
+          page_name: "RetailPro",
           category: "general",
           timestamp: new Date().toISOString()
         }
