--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="info-box">
     <h3>User Data Sent to Bot</h3>
     <p><strong>Email:</strong> <span id="user-email">test.user@example.com</span></p>
-    <p><strong>Page1:</strong> <span id="page-name">Homepage</span></p>
+    <p><strong>Page:</strong> <span id="page-name">Homepage</span></p>
     <p><strong>Category:</strong> <span id="category">general</span></p>
   </div>
 
@@ -75,8 +75,12 @@
     });
 
    function clearChat() {
+     const customerPayload={
+trigger:"action1"
+};
+     
   if (window.botpress && window.botpress.sendEvent) {
-    window.botpress.sendEvent({ type: 'webchat/reset' });
+    window.botpress.sendEvent(customerPayload);
     console.log('Chat cleared ✅');
   } else {
     console.error('Botpress not ready yet!');
