--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       });
     });
 
-.document.getElementById('triggerBotAction1').addEventListener('click',async()=>{
+document.getElementById('triggerBotAction1').addEventListener('click',async()=>{
 const customerPayload={
 trigger:"action1"
 };
